--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "cogs-transformer-sass",
-  "version": "3.0.1",
+  "version": "4.0.0",
   "author": "Casey Foster <c@sey.me>",
   "description": "A Sass transformer for Cogs.",
   "license": "MIT",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/caseywebdev/cogs-transformer-sass"
   },
   "dependencies": {
-    "node-sass": "4",
-    "npath": "1",
-    "underscore": "1.8.3"
+    "node-sass": "5",
+    "underscore": "1"
   },
   "devDependencies": {
-    "cogs-test-helper": "3"
+    "cogs-test-helper": "4"
   },
   "scripts": {
     "test": "cogs-test-helper test/test.js"
