--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "cogs-transformer-sass",
-  "version": "4.0.0",
+  "version": "4.1.0",
   "author": "Casey Foster <c@sey.me>",
   "description": "A Sass transformer for Cogs.",
   "license": "MIT",
   "type": "module",
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/caseywebdev/cogs-transformer-sass"
   },
   "dependencies": {
-    "node-sass": "5",
-    "underscore": "1"
+    "sass": "1"
   },
   "devDependencies": {
     "cogs-test-helper": "4"
